<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">通兑网</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_alert">提示</string>
    <string name="title_waitting">请稍候</string>
    <string name="noNetTips">请您确认已开通手机上网功能，并在手机上设置正确的上网方式</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="get_pwd">取回密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="catalogtitle">主界面</string>
    <string name="phoneNoNull">手机号码不能为空</string>
    <string name="phoneNoIllegal">手机号码格式不正确</string>
    <string name="queryingContact">正在获取联系人列表</string>
    <string name="goon">继续查询</string>
    <string name="goback">返回首页</string>
    <string name="noPublicKey">没有公钥数据，请确认您已经注册或联系客服!</string>
    <string name="pwdKeyboardTips">完美支付为保护您的密码安全，请您使用定制的键盘输入密码。密码键盘每次随机打乱按键顺序，并且在您输入完6位密码后自动对密码进行加密，全面保护您的账户安全。</string>
    <string name="phoneNo2">手机号</string>
    <string name="pInputPhoneNoOut">请输入付款人手机号</string>

</resources>