<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/topbar"
        layout="@layout/titlebar" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/white_bg"
        android:orientation="vertical"
        android:paddingBottom="50dip" >
        
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@drawable/input_login"
            android:orientation="horizontal" >
            
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_login_1"
                android:layout_gravity="center_vertical"
                />
            
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:layout_marginLeft="5dip"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:id="@+id/usernameET"/>
        </LinearLayout>
        
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_login"
            android:layout_marginTop="15dip"
            android:orientation="horizontal">
            
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_login_2"
                android:layout_gravity="center_vertical"
                />
            
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pwd"
                android:layout_marginLeft="5dip"
                android:inputType="textPassword"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:id="@+id/pwdET"/>
        </LinearLayout>
        
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dip">
            
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/remeberpwd_n"
                android:id="@+id/rememberIV"/>
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_pwd"
                android:layout_marginLeft="3dip"/>
            
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_pwd"
                android:background="@color/clear"
                android:layout_marginLeft="30dip"
                android:id="@+id/getPwdButton"
                android:textColor="@color/blue"/>
            
        </LinearLayout>
        
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dip"
            >
            
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/register_button_n"
                android:id="@+id/registerButton"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
            
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_n"
                android:id="@+id/loginButton"
                android:text="@string/login"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:textSize="18sp"
                />
        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>
